# vault-agent

./: .env.example  .gitignore  ARCHITECTURE_REVIEW_2026-06-13.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/bank_postgres/: .gitignore  README.md  build_vault_models.py  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
docs/: competitive-landscape.md  how-requirements-become-a-model.md  pre-mortem.md  reality-test.md
docs/architecture/: 0-vision.md  1-architecture-overview.md  2-multi-agent-design.md  data-contract-agent-spec.md  eff-sat-incremental-fix-spec.md  poc-end-to-end-dbt-spec.md  reality-test-remediation-spec.md  review-2026-06-remediation-spec.md  source-schema-input-spec.md
docs/blog/: 2026-06-why-data-vault-is-ready-for-agentic-ai.md
docs/demos/: README.md  health-insurance-walkthrough.md
docs/handover/: session-2026-06-07.md
docs/methodology/: data-contracts-approach.md  dsaf-mapping.md  dv2-modeling-rules-spec.md  dv2-rules-cheatsheet.md  ireb-mapping.md
examples/: 01_simple_requirement.py  02_business_keys.py  03_dv_model.py  04_generate_code.py  05_validate.py  06_pipeline.py  07_routing.py
examples/inputs/: bank_account_requirements.md  bank_source_schema.yml  health_insurance_requirements.md  messy_insurance_requirements.md  messy_insurance_source_schema.yml
scripts/: dev_setup.sh
src/vault_agent/: __init__.py  cli.py  config.py  graph.py  grounding.py  source_schema.py  state.py
tests/: conftest.py  test_cli.py  test_config.py  test_demo_bank_postgres.py  test_graph.py  test_grounding.py  test_source_schema.py  test_state.py
tests/test_agents/: test_adr_author.py  test_business_key_identifier.py  (+6 more)
(+48 files in other folders)
