[project]
name = "vault-agent"
version = "0.1.0"
description = "Agentic AI for Data Vault 2.0 automation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Mischa Eismann", email = "me@eismann.consulting" }]
keywords = ["data-vault", "agentic-ai", "langgraph", "dbt", "automatedv"]

dependencies = [
    "anthropic>=0.39",
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "rich>=13.0",
    "typer>=0.12",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.11",
    "ipykernel>=6.29",
]
eval = [
    "langsmith>=0.1",
]
# Local Data Vault Durchstich (demo/bank_postgres). dbt + Postgres adapter; pulled in
# only for the runnable demo so they don't bloat the core package. See
# docs/architecture/poc-end-to-end-dbt-spec.md.
demo = [
    "dbt-core~=1.9.0",
    "dbt-postgres~=1.9.0",
]

[project.scripts]
vault-agent = "vault_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
